# android-file-converter

./: .gitignore  BUILDING.md  PRIVACY.md  release-please-config.json  settings.gradle.kts
.github/workflows/: build.yml  deploy.yml
.sisyphus/evidence/: task-10-aab-size.txt  task-10-r8-logcat.txt  task-7-ffmpeg-gated.txt
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: pandoc_bridge.js  pandoc_host.html  wasi_shim.js
app/src/main/cpp/: CMakeLists.txt  ffmpeg_bridge.c  pandoc_bridge.cpp
app/src/main/cpp/compat/: android_log_compat.h  jni_compat.h
app/src/main/cpp/ffmpeg/libavformat/: avformat.h
app/src/main/cpp/ffmpeg/libavutil/: avutil.h
app/src/main/java/com/stephanmeijer/fileconverter/: FileConverterApp.kt  MainActivity.kt  PandocBridge.kt
app/src/main/java/com/stephanmeijer/fileconverter/engine/: ConversionForegroundService.kt  ConversionRouter.kt  FFmpegBridge.kt  FFmpegCommandBuilder.kt  FFmpegEngine.kt  FFmpegErrorParser.kt  FileProcessor.kt  FormatDetector.kt  MediaConversionResult.kt  PandocEngine.kt  SelectedFile.kt
app/src/main/java/com/stephanmeijer/fileconverter/navigation/: Navigation.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/images/: README.md
gradle/: libs.versions.toml
tools/: README-ffmpeg.md  build-ffmpeg.sh
(+17 files in other folders)
